--- a/redux/package.json
+++ b/redux/package.json
@@ -36,5 +36,11 @@
     "webpack-bundle-analyzer": "4.5.0",
     "webpack-cli": "4.9.1",
     "webpack-dev-server": "4.6.0"
+  },
+  "dependencies": {
+    "redux": "4.1.2",
+    "redux-devtools-extension": "2.13.9",
+    "redux-logger": "3.0.6",
+    "redux-thunk": "2.4.1"
   }
 }
