--- a/GraphQL/client/package.json
+++ b/GraphQL/client/package.json
@@ -44,6 +44,7 @@
     "css-loader": "^6.6.0",
     "eslint": "^8.10.0",
     "eslint-loader": "^4.0.2",
+    "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
