--- a/GraphQL/client/package.json
+++ b/GraphQL/client/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
     "react-swipeable-views": "^0.13.1",
-    "recompose": "^0.30.0"
+    "recompose": "^0.30.0",
+    "ts-loader": "^9.2.8",
+    "typescript": "^4.6.3"
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack --mode development",
@@ -31,12 +33,14 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@babel/core": "^7.17.5",
+    "@babel/core": "^7.17.8",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@types/lodash": "^4.14.180",
+    "@types/react-dom": "^17.0.14",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
